# etymos

./: .gitignore  README.md  pyproject.toml
src/: data_cleaning.py  dataset.py  dataset_maker.py  model.py  utils.py
